fixes #1: search and dispatch tasks have been moved to a service

--- a/src/main/resources/fr/perso/nfelix/app/ui/views/i18n/home.properties
+++ b/src/main/resources/fr/perso/nfelix/app/ui/views/i18n/home.properties
@@ -6,6 +6,8 @@ menu.main.text=_Fichier
 menu.main.preferences.text=Préférences/Options
 menu.main.quit.text=Quitter
 
+label.action.title=Actions
+
 menu.help.export.mode=Activer le mode Expert
 menu.help.userguide=Afficher la documentation
 menu.help.logs=Afficher les logs
