fixes #5, #6, #7: process optimization and new options: * operation can be cancelled (while processing) * huge file copy gives more information (every 10 percent) * files can be: ** renamed according to their creation date (format *YYYMMJJ_HHmmSS*) ** relocated to our time zone (as pictures can have been taken all around the world, without fitting camera settings)

--- a/src/main/resources/fr/perso/nfelix/app/ui/views/i18n/home.properties
+++ b/src/main/resources/fr/perso/nfelix/app/ui/views/i18n/home.properties
@@ -39,7 +39,9 @@ error.import.error.title=Erreur
 run.job.notification.title.ok=Opération terminée avec succès
 run.job.notification.title.ko=Opération terminée en erreur
 run.job.notification.title.cancel=Opération terminée manuellement
-run.job.notification.content.ok=L''import a été réalisé avec succès
+run.job.notification.content.ok=L''opération a été réalisée avec succès
+run.job.notification.content.ko=L''opération n'a PAS été réalisée avec succès
+run.job.notification.content.cancel=L''opération a été stoppée par vos soins ^^
 
 # execution error
 run.job.error.title=Erreur d''exécution !
