--- a/src/main/resources/fr/perso/nfelix/app/ui/views/i18n/home.properties
+++ b/src/main/resources/fr/perso/nfelix/app/ui/views/i18n/home.properties
@@ -25,8 +25,8 @@ userguide.file.notfound.title=Fichier non trouvé...
 userguide.file.notfound.header=Le mode d''emploi (''{0}'') n''a pas été trouvé !
 
 #about
-about.title=A propos de ImgDispatcherUIApp
-about.header=ImgDispatcherUIApp v.{0} ({1})
+about.title=A propos de ImgDispatcherApp
+about.header=ImgDispatcherUI v.{0} ({1})
 about.content=Des trucs et d'autres...
 
 database.status.ok=La connexion à la base de données a été établie
