fixes (many) warnings

--- a/src/main/resources/fr/perso/nfelix/app/ui/views/i18n/main.properties
+++ b/src/main/resources/fr/perso/nfelix/app/ui/views/i18n/main.properties
@@ -6,6 +6,11 @@ preloader.message4=Récupération de la liste des mairies
 
 spring.context.loading=Chargement de la configuration.\r\nVeuillez patienter svp...
 
+google.test.title=Test de la connexion au service Google
+google.test.ok.header=Connexion OK
+google.test.ko.header=Connexion KO
+google.test.ok.content=Connexion au service Google réussie
+google.test.ko.content=Échec de la connexion au service Google
 
 jdbc.test.title=Test de la connexion JDBC
 jdbc.test.invalid.settings.header=Paramètres incomplets
